# sub-lang

./: .gitignore  .replit  CONTRIBUTING.md  FIXES_APPLIED.md  IMPLEMENTATION_GUIDE.md  LANGUAGE_SPEC.md  MULTILANG_GUIDE.md  Makefile  OPENCODE_WINDOWS_FIX_PROMPTS.md  PROJECT_SUMMARY.md  README.md  RELEASE_v1.0.2.md  TRANSFORMATION_SUMMARY.md  WINDOWS_AND_ROADMAP_PROMPTS.md  codegen.c  codegen_multilang.c  codegen_x64.c  codegen_x64.h  ir.c  lexer.c  parser.c  parser_enhanced.c  reorganize_src.sh  replit.md  semantic.c  sub.c  sub_compiler.h  sub_multilang.c  sub_native_compiler.c  table.md  test_embed.sb  test_real.sb  utils.c  windows_compat.h
.github/workflows/: ci.yml  release.yml  reorganize-files.yml  reorganize-src.yml  test.yml
compiler/backend/: codegen.c
compiler/frontend/src/: lib.rs
compiler/middle_end/: semantic_analyzer.hpp
compiler_rust/: Cargo.toml
src/codegen/: codegen.c
src/core/: README.md  parser.c  parser_enhanced.c  semantic.c  utils.c
src/ir/: ir.c
