[package]
name = "sub-compiler"
version = "2.0.0"
authors = ["SUB Language Team"]
edition = "2021"
rust-version = "1.70"

[dependencies]
# CLI and argument parsing
clap = { version = "4.5", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Parsing and lexing
pest = "2.7"
pest_derive = "2.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Code generation
inkwell = { version = "0.4", features = ["llvm16-0"] }  # LLVM bindings

# Parallel processing
rayon = "1.8"

# Logging
log = "0.4"
env_logger = "0.11"

# Performance profiling
cpuprofiler = "0.0.4"

[dev-dependencies]
criterion = "0.5"  # Benchmarking

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1  # Faster dev builds

[[bin]]
name = "subc"
path = "src/main.rs"

[[bench]]
name = "compiler_bench"
harness = false
